--- a/frontend/src/i18n/locales/ko/event.json
+++ b/frontend/src/i18n/locales/ko/event.json
@@ -17,14 +17,14 @@
     "name": "당신의 이름",
     "password": "비밀번호 (선택 사항)",
     "button": "로그인",
-    "logout_button": "로그아웃합니다",
-    "info": "이러한 세부 정보는이 이벤트에 한정됩니다. 다른 사람이 귀하의 가용성을 변경하지 못하도록 암호를 사용하십시오.",
+    "logout_button": "로그아웃",
+    "info": "이러한 세부 정보는 이 이벤트에 한정됩니다. 다른 사람이 귀하의 가용성을 변경하지 못하도록 암호를 사용하십시오.",
 
     "timezone": "시간대",
 
     "errors": {
       "name_required": "사용 가능 여부를 저장하려면 이름이 필요합니다.",
-      "password_incorrect": "비밀번호가 맞지 않습니다. 당신의 이름이 바로 철자 확인하십시오.",
+      "password_incorrect": "비밀번호가 맞지 않습니다. 이름이 맞는지 확인하십시오.",
       "unknown": "로그인 실패. 다시 시도하십시오."
     },
 
@@ -37,18 +37,18 @@
   },
   "error": {
     "title": "이벤트를 찾을 수 없습니다",
-    "body": "입력 한 URL이 올바른지 확인하십시오. 개인 정보를 보호하기 위해 이벤트는 3개월 동안 사용하지 않으면 삭제됩니다."
+    "body": "입력한 URL이 올바른지 확인하십시오. 개인 정보를 보호하기 위해 이벤트는 3개월 동안 사용하지 않으면 삭제됩니다."
   },
 
   "tabs": {
-    "you": "귀하의 가용성",
-    "you_tooltip": "가용성을 설정하려면 로그인하십시오.",
-    "group": "그룹 가용성"
+    "you": "귀하의 가용 일정",
+    "you_tooltip": "가용 일정을 설정하려면 로그인하십시오.",
+    "group": "그룹 일정"
   },
 
   "group": {
     "legend_tooltip": "가장 높은 가용성을 강조하려면 클릭하십시오",
-    "info1": "누가 무료인지 확인하려면 아래 캘린더를 가리 키거나 탭하세요",
+    "info1": "누가 가능한 지 확인하려면 아래 캘린더를 가리 키거나 탭하세요",
     "info2": "사람들을 개별적으로 보려면 아래 이름을 클릭하십시오"
   },
 
@@ -60,7 +60,7 @@
     "google_cal": "Google 캘린더와 동기화합니다",
     "outlook_cal": "아웃룩 캘린더와 동기화합니다",
     "integration": {
-      "logout": "로그 아웃",
+      "logout": "로그아웃",
       "info": "가져 오면 현재 사용 가능 여부를 덮어 씁니다",
       "button": "가용성 가져 오기"
     }
